retrieve spacing styling correction

--- a/src/sass/_view_grid.scss
+++ b/src/sass/_view_grid.scss
@@ -308,12 +308,12 @@
 
   //retrieve quote styling
   .retrieveQuoteWrapper {
-    padding: 0 1rem 1rem 0;
+    padding: 0 0 0.5rem 0;
     width: 100%;
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
-    flex-shrink: 1;
+    flex-grow: 0;
+    flex-shrink: 0;
 
     h1 {
       margin-bottom: 0;
